--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -5,7 +5,7 @@
 
     --color-secondary: #595959;
 
-    --color-light: #fff
+    --color-light: #fff;
     --color-light-dark-1: #f1f2f4
 
     --color-gray: #595959
