Section of promotions

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,6 +12,7 @@ html {
 body {
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
+    background-color: var(--color-light-dark);
 }
 
 button {
