--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,5 @@
+/* Header */
+
 .header-container {
     height: 80vh;
 }
@@ -34,11 +36,96 @@
 }
 
 .description__text {
-    color: white;
+    color: var(--color-light);
     font-size: 1.1rem;
     font-weight: 500;
     text-align: center;
     padding: 1.5rem;
     letter-spacing: 1.2;
     margin-bottom: 1.5rem;
+}
+
+/* Main */
+
+.main-container {
+    padding: 2rem;
+}
+
+.main__title {
+    text-align: center;
+    font-weight: 500;
+    margin: 1rem 0 2.5rem 0;
+}
+
+.promo__cards {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.card-container {
+    padding: 1rem;
+    background-color: var(--color-light);
+    border-radius: 5px;
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1);
+    max-width: 350px;
+}
+
+.card-container:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+.card-container__img {
+    overflow: hidden;
+}
+
+.product-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.card__description {
+    font-size: 1.1rem;
+    max-width: 95%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card__price {
+    margin-top: 1rem;
+    font-weight: 700;
+}
+
+.card__price-promo {
+    padding: 0.3rem;
+    margin-right: 0.5rem;
+    border-radius: 5px;
+    background-color: var(--color-primary);
+    color: var(--color-light);
+}
+
+.card__price-truncated {
+    margin-top: 1rem;
+}
+
+.price-truncated {
+    opacity: 0.5;
+    text-decoration: line-through;
+    margin-right: 0.5rem;
+}
+
+.price-discount {
+    padding: 0.3rem;
+    background-color: var(--color-primary);
+    border-radius: 5px;
+    color: var(--color-light);
+    font-weight: 700;
+}
+
+.free-shipping {
+    font-weight: 500;
+    display: inline-block;
+    margin-top: 1rem;
 }
