--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -6,8 +6,8 @@
     --color-secondary: #595959;
 
     --color-light: #fff;
-    --color-light-dark-1: #f1f2f4
+    --color-light-dark: #f1f2f4;
 
-    --color-gray: #595959
+    --color-gray: #595959;
 
 }
