--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,6 +13,7 @@ body {
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     background-color: var(--color-light-dark);
+    scroll-behavior: smooth;
 }
 
 button {
