--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,9 @@
 
 .header-container {
     height: 80vh;
-    background-image: url(../assets/header-background.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url(../assets/header-background.jpg);
+
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
